# AI-tutor-project-with-UV-and-FAST-APi

./: .gitignore  README.md  notes.txt  pyproject.toml  python.txt
backend/: main.py  test.txt
backend/auth/: deps.py  models.py  routes.py  schemas.py  utils.py
backend/routes/: admin.py  chat.py  meta.py
backend/services/: mentor.py  tutor.py
